      This allows creation of validating AttributeListeners which
      raise before the action actually occurs, and which can change
      the given value into something else before its used.

    - column_property(), composite_property(), and relation() now 
      accept a single or list of AttributeExtensions using the 
      "extension" keyword argument.
      
    - Added a Validator AttributeExtension, as well as a 
      @validates decorator which is used in a similar fashion
      as @reconstructor, and marks a method as validating
      one or more mapped attributes.
      
    - class.someprop.in_() raises NotImplementedError pending the
      implementation of "in_" for relation [ticket:1140]

    - Fixed primary key update for many-to-many collections where
      the collection had not been loaded yet [ticket:1127]

    - Fixed bug whereby deferred() columns with a group in conjunction
      with an otherwise unrelated synonym() would produce 
      an AttributeError during deferred load.
      
    - The before_flush() hook on SessionExtension takes place before
      the list of new/dirty/deleted is calculated for the final
      time, allowing routines within before_flush() to further
      change the state of the Session before the flush proceeds.
      [ticket:1128]

    - The "extension" argument to Session and others can now
      optionally be a list, supporting events sent to multiple
      SessionExtension instances.  Session places SessionExtensions
      in Session.extensions.
      
    - Reentrant calls to flush() raise an error.  This also serves
      as a rudimentary, but not foolproof, check against concurrent
      calls to Session.flush().

    - Improved the behavior of query.join() when joining to
      joined-table inheritance subclasses, using explicit join
      criteria (i.e. not on a relation).

    - @orm.attributes.on_reconsitute and
      MapperExtension.on_reconstitute have been renamed to