@@ -92,6 +92,9 @@ class GetTest(QueryTest):
         q = s.query(User).join('addresses').filter(Address.user_id==8)
         self.assertRaises(sa_exc.InvalidRequestError, q.get, 7)
         self.assertRaises(sa_exc.InvalidRequestError, s.query(User).filter(User.id==7).get, 19)
+        
+        # order_by()/get() doesn't raise
+        s.query(User).order_by(User.id).get(8)
 
     def test_unique_param_names(self):
         class SomeUser(object):
@@ -221,6 +224,9 @@ class InvalidGenerationsTest(QueryTest):
         self.assertRaises(sa_exc.InvalidRequestError, q.select_from, users)
 
         q = s.query(User).join('addresses')
+        self.assertRaises(sa_exc.InvalidRequestError, q.select_from, users)
+        
+        q = s.query(User).order_by(User.id)
         self.assertRaises(sa_exc.InvalidRequestError, q.select_from, users)
         
         # this is fine, however
